# AzAI-CLI

./: AGENT.md  README.md  metadata.json  package-lock.json  package.json
cpp-cli/: .gitignore  BUILD.md  CMakeLists.txt  README.md  VISUAL-STUDIO.md  WINDOWS-BUILD-GUIDE.md  WINDOWS-MANUAL-SETUP.md  config.json.example  setup-windows.ps1  vcpkg.json
cpp-cli/include/: azai_common.hpp  openai.hpp  search.hpp
cpp-cli/src/: azai_common.cpp  main.cpp  openai.cpp  search.cpp
src/: App.tsx  data.ts  index.css
src/components/: CodeBlock.tsx
